--- a/src/app/modulos/administracion/clientes/detalles-cliente/detalles-cliente.component.html
+++ b/src/app/modulos/administracion/clientes/detalles-cliente/detalles-cliente.component.html
@@ -18,7 +18,6 @@
     </div>
   </div>
   <div mat-dialog-actions align="center">
-    <button class="btn-cancelar" mat-button (click)="cancelar()">Cancelar</button>
-    <button class="btn btn-aceptar">Aceptar</button>
+    <button class="btn-cancelar" mat-button (click)="cancelar()">Aceptar</button>
   </div>
 </div>
