--- a/src/app/modulos/administracion/clientes/crear-cliente/crear-cliente.component.css
+++ b/src/app/modulos/administracion/clientes/crear-cliente/crear-cliente.component.css
@@ -1,47 +1,34 @@
-mat-form-field {
-  width: 100%;
+h3 {
+  font-weight: 600;
+  text-align: left;
 }
 
-.row {
+.content {
+  grid-auto-columns: 2;
   display: flex;
 }
 
 .column {
-  flex: 50%;
-  margin: 0px 5px;
-  padding: 10px;
-}
-.column-2 {
-  columns: 2;
-  margin: 10px 20px;
-}
-.error {
-  color: #b0304b;
-  margin-top: -10px;
-}
-
-.container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.column-3 {
-  columns: 3;
-  margin: 10px 20px;
-}
-.column-3 .column-edad {
   width: 100%;
-  margin: 0px 0px;
-  padding: 7px;
+  grid-auto-rows: auto;
+  margin: 10px;
+  border-radius: 3px;
+  padding: 5px;
 }
-
-.button-center {
-  display: flex;
-  margin-top: 10px;
-  justify-content: center;
-  align-items: center;
+.center button {
+  margin: 0px 10px;
 }
-
-h3{
-  font-weight: 600;
+mat-select{
+  margin-top: 8px;
+  margin-bottom: 5px;
+  padding: 8px 0px;
+  border-bottom: 1px solid rgb(146, 143, 143);
+}
+@media screen and (min-width: 0px) and (max-width: 500px) {
+  .screen {
+    height: auto;
+  }
+  .content {
+    display: block;
+  }
 }
