--- a/src/app/modulos/adminproductos/vehiculos/crear-vehiculos/crear-vehiculos.component.css
+++ b/src/app/modulos/adminproductos/vehiculos/crear-vehiculos/crear-vehiculos.component.css
@@ -1,19 +1,34 @@
-h3{
+h3 {
   font-weight: 600;
   text-align: left;
 }
 
+.content {
+  grid-auto-columns: 2;
+  display: flex;
+}
+
 .column {
-  flex: 50%;
-  margin: 0px 5px;
-  padding: 10px;
+  width: 100%;
+  grid-auto-rows: auto;
+  margin: 10px;
+  border-radius: 3px;
+  padding: 5px;
 }
-.column-2 {
-  columns: 2;
-  margin: 10px 20px;
+.center button {
+  margin: 0px 10px;
 }
-
 mat-select{
-  margin: 10px 0px;
-
+  margin-top: 8px;
+  margin-bottom: 5px;
+  padding: 8px 0px;
+  border-bottom: 1px solid rgb(146, 143, 143);
+}
+@media screen and (min-width: 0px) and (max-width: 500px) {
+  .screen {
+    height: auto;
+  }
+  .content {
+    display: block;
+  }
 }
