--- a/src/app/modulos/administracion/clientes/listar-cliente/listar-cliente.component.html
+++ b/src/app/modulos/administracion/clientes/listar-cliente/listar-cliente.component.html
@@ -39,6 +39,9 @@
           >delete</span>
         <span (click)="DetallesModals(element.id)" class="material-icons details">info</span
         >
+          <a routerLink="/administracion/mis-vehiculos/{{ element.id }}"
+          ><span class="material-icons  miscarros">local_shipping</span></a
+        >
       </td>
     </ng-container>
 
